Add steps for storing/instantiating contract + onboarding trader

--- a/hft-demo/Makefile
+++ b/hft-demo/Makefile
@@ -38,4 +38,4 @@ optimize:
 
 .PHONY: install
 install: optimize
-	@cp artifacts/hft-demo.wasm $(PROVWASM_INSTALL_DIR)
+	@cp artifacts/hft.wasm $(PROVWASM_INSTALL_DIR)
