--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tutorial"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["David Pederson <dpederson@figure.com>"]
 edition = "2018"
 
@@ -27,13 +27,13 @@ overflow-checks = true
 backtraces = []
 
 [dependencies]
-provwasm-std = { version = "0.13.3" }
-cosmwasm-std = { version = "0.13.2" }
-cosmwasm-storage = { version = "0.13.2" }
-schemars = "0.7"
+provwasm-std = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta2",  version = "0.14.0-beta2"}
+cosmwasm-std = { version = "0.14.0-beta2" }
+cosmwasm-storage = { version = "0.14.0-beta2" }
+schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.21" }
+thiserror = { version = "1.0.20" }
 
 [dev-dependencies]
-provwasm-mocks = { version = "0.13.3" }
-cosmwasm-schema = { version = "0.13.2" }
+provwasm-mocks = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta2", version = "0.14.0-beta2" }
+cosmwasm-schema = { version = "0.14.0-beta2" }
