--- a/hft-demo/Cargo.toml
+++ b/hft-demo/Cargo.toml
@@ -28,12 +28,12 @@ backtraces = []
 
 [dependencies]
 provwasm-std = { version = "0.14.0-beta1" }
-cosmwasm-std = { version = "0.14.0-beta1" }
-cosmwasm-storage = { version = "0.14.0-beta1" }
+cosmwasm-std = { version = "=0.14.0-beta1" }
+cosmwasm-storage = { version = "=0.14.0-beta1" }
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.20" }
 
 [dev-dependencies]
 provwasm-mocks = { version = "0.14.0-beta1" }
-cosmwasm-schema = { version = "0.14.0-beta1" }
+cosmwasm-schema = { version = "=0.14.0-beta1" }
