--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -35,5 +35,5 @@ serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.20" }
 
 [dev-dependencies]
-provwasm-mocks = { version = "0.14.0-beta3" }
+provwasm-mocks = { version = "0.14.0" }
 cosmwasm-schema = { version = "0.14.0" }
