--- a/orderbook/Cargo.toml
+++ b/orderbook/Cargo.toml
@@ -27,13 +27,13 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-provwasm-std = { version = "=0.14.0-beta1" }
-cosmwasm-std = { version = "=0.14.0-beta1", features = ["iterator"] }
-cosmwasm-storage = { version = "=0.14.0-beta1", features = ["iterator"] }
-schemars = "0.7"
+provwasm-std = { version = "0.14.0" }
+cosmwasm-std = { version = "0.14.0", features = ["iterator"] }
+cosmwasm-storage = { version = "0.14.0", features = ["iterator"] }
+schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 
 [dev-dependencies]
-provwasm-mocks = { version = "=0.14.0-beta1" }
-cosmwasm-schema = { version = "=0.14.0-beta1" }
+provwasm-mocks = { version = "0.14.0" }
+cosmwasm-schema = { version = "0.14.0" }
